force-app/main/default/objects/Human__c/Human__c.object-meta.xml
<CustomObject>
    <label>求職者</label>
    <pluralLabel>求職者</pluralLabel>
    <nameField>
        <displayFormat>求職-{000000}</displayFormat>
        <label>求職者番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>