force-app/main/default/objects/Human__c/fields/AbilityAppeal__c.field-meta.xml
<CustomField>
    <fullName>AbilityAppeal__c</fullName>
    <label>活用したい能力・経験等</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>