force-app/main/default/objects/Human__c/fields/ActivityDays__c.field-meta.xml
<CustomField>
    <fullName>ActivityDays__c</fullName>
    <label>希望活動日数</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>週1</fullName>
            </value>
            <value>
                <fullName>週2</fullName>
            </value>
            <value>
                <fullName>週3</fullName>
            </value>
            <value>
                <fullName>週4</fullName>
            </value>
            <value>
                <fullName>週5</fullName>
            </value>
            <value>
                <fullName>週6</fullName>
            </value>
            <value>
                <fullName>週7</fullName>
            </value>
            <value>
                <fullName>不定期</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>