force-app/main/default/objects/Human__c/fields/ActivityForm__c.field-meta.xml
<CustomField>
    <fullName>ActivityForm__c</fullName>
    <label>希望活動形態</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有期労働・パートタイム</fullName>
            </value>
            <value>
                <fullName>有償ボランティア</fullName>
            </value>
            <value>
                <fullName>無償ボランティア</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>