force-app/main/default/objects/Human__c/fields/ActivityWeekTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityWeekTime__c</fullName>
    <label>活動可能な曜日・時間帯</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>月曜午前</fullName>
            </value>
            <value>
                <fullName>月曜午後</fullName>
            </value>
            <value>
                <fullName>火曜午前</fullName>
            </value>
            <value>
                <fullName>火曜午後</fullName>
            </value>
            <value>
                <fullName>水曜午前</fullName>
            </value>
            <value>
                <fullName>水曜午後</fullName>
            </value>
            <value>
                <fullName>木曜午前</fullName>
            </value>
            <value>
                <fullName>木曜午後</fullName>
            </value>
            <value>
                <fullName>金曜午前</fullName>
            </value>
            <value>
                <fullName>金曜午後</fullName>
            </value>
            <value>
                <fullName>土曜午前</fullName>
            </value>
            <value>
                <fullName>土曜午後</fullName>
            </value>
            <value>
                <fullName>日曜午前</fullName>
            </value>
            <value>
                <fullName>日曜午後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>