force-app/main/default/objects/Human__c/fields/AgainSendEmail__c.field-meta.xml
<CustomField>
    <fullName>AgainSendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>研修通知再送信</label>
    <type>Checkbox</type>
</CustomField>