force-app/main/default/objects/Human__c/fields/AnnouncementDate__c.field-meta.xml
<CustomField>
    <fullName>AnnouncementDate__c</fullName>
    <label>登録前研修・面談の案内日</label>
    <type>Date</type>
</CustomField>