force-app/main/default/objects/Human__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>登録者情報の申請日</label>
    <type>Date</type>
</CustomField>