force-app/main/default/objects/Human__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>希望する地域</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>千代田区</fullName>
            </value>
            <value>
                <fullName>中央区</fullName>
            </value>
            <value>
                <fullName>港区</fullName>
            </value>
            <value>
                <fullName>新宿区</fullName>
            </value>
            <value>
                <fullName>文京区</fullName>
            </value>
            <value>
                <fullName>台東区</fullName>
            </value>
            <value>
                <fullName>墨田区</fullName>
            </value>
            <value>
                <fullName>江東区</fullName>
            </value>
            <value>
                <fullName>品川区</fullName>
            </value>
            <value>
                <fullName>目黒区</fullName>
            </value>
            <value>
                <fullName>大田区</fullName>
            </value>
            <value>
                <fullName>世田谷区</fullName>
            </value>
            <value>
                <fullName>渋谷区</fullName>
            </value>
            <value>
                <fullName>中野区</fullName>
            </value>
            <value>
                <fullName>杉並区</fullName>
            </value>
            <value>
                <fullName>豊島区</fullName>
            </value>
            <value>
                <fullName>北区</fullName>
            </value>
            <value>
                <fullName>荒川区</fullName>
            </value>
            <value>
                <fullName>板橋区</fullName>
            </value>
            <value>
                <fullName>練馬区</fullName>
            </value>
            <value>
                <fullName>足立区</fullName>
            </value>
            <value>
                <fullName>葛飾区</fullName>
            </value>
            <value>
                <fullName>江戸川区</fullName>
            </value>
            <value>
                <fullName>八王子市</fullName>
            </value>
            <value>
                <fullName>立川市</fullName>
            </value>
            <value>
                <fullName>武蔵野市</fullName>
            </value>
            <value>
                <fullName>三鷹市</fullName>
            </value>
            <value>
                <fullName>青梅市</fullName>
            </value>
            <value>
                <fullName>府中市</fullName>
            </value>
            <value>
                <fullName>昭島市</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>