force-app/main/default/objects/Human__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>登録前研修・面談の受講確認</label>
    <type>Checkbox</type>
</CustomField>