force-app/main/default/objects/Human__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <formula
  >IF(RecordType.Name=&quot;個人&quot; || RecordType.Name=&quot;個人会員&quot; || RecordType.Name=&quot;個人削除等&quot; || RecordType.Name=&quot;個人受付&quot; || RecordType.Name=&quot;個人評価&quot;,KanjiSei__c  &amp;  &quot; &quot; &amp;  KanjiMei__c,&apos;&apos;)</formula>
    <label>登録者名</label>
    <type>Text</type>
</CustomField>