force-app/main/default/objects/Human__c/fields/Before_date__c.field-meta.xml
<CustomField>
    <fullName>Before_date__c</fullName>
    <formula
  >IF(  ISBLANK( Interview_Name__c), &quot;&quot;, SUBSTITUTE(TEXT(Interview_Name__r.OpenDate__c), &quot;-&quot;, &quot;/&quot;)  &amp;  &quot;  &quot; &amp; TEXT( HOUR(Interview_Name__r.StartTime__c))  &amp; &quot;:&quot; &amp;  IF(MINUTE(Interview_Name__r.StartTime__c) &lt; 10, &quot;0&quot; &amp; TEXT(MINUTE(Interview_Name__r.StartTime__c)), TEXT(MINUTE(Interview_Name__r.StartTime__c))) &amp; &quot;～&quot;)</formula>
    <label>登録前研修日</label>
    <type>Text</type>
</CustomField>