force-app/main/default/objects/Human__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>生年月日</label>
    <type>Date</type>
</CustomField>