force-app/main/default/objects/Human__c/fields/Birthday_Wareki__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Wareki__c</fullName>
    <formula
  >IF ( AND ( Birthday__c &gt;= DATE (1868,09,08), Birthday__c &lt;= DATE (1912,07,29)), &quot;明治&quot; &amp; TEXT ( YEAR ( Birthday__c ) - 1867 ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( Birthday__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( Birthday__c )) &amp; &quot;日&quot;, IF ( AND ( Birthday__c &gt;= DATE (1912,07,30), Birthday__c &lt;= DATE (1926,12,24)), &quot;大正&quot; &amp; TEXT ( YEAR ( Birthday__c ) - 1911) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( Birthday__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( Birthday__c )) &amp; &quot;日&quot;, IF ( AND ( Birthday__c &gt;= DATE (1926,12,25), Birthday__c &lt;= DATE (1989,01,07)), &quot;昭和&quot; &amp; TEXT ( YEAR ( Birthday__c ) - 1925 ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( Birthday__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( Birthday__c )) &amp; &quot;日&quot;, IF ( AND ( Birthday__c &gt;= DATE (1989,01,08), Birthday__c &lt;= DATE (2019,04,30)), &quot;平成&quot; &amp; TEXT ( YEAR ( Birthday__c ) - 1988 ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( Birthday__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( Birthday__c )) &amp; &quot;日&quot;, IF ( Birthday__c &gt;= DATE (2019,05,01), &quot;令和&quot; &amp; TEXT ( YEAR ( Birthday__c) - 2018) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( Birthday__c )) &amp; &quot;月&quot; &amp; TEXT ( DAY ( Birthday__c )) &amp; &quot;日&quot;, &quot;#エラー&quot;)))))</formula>
    <label>生年月日（和暦）</label>
    <type>Text</type>
</CustomField>