force-app/main/default/objects/Human__c/fields/Career1__c.field-meta.xml
<CustomField>
    <fullName>Career1__c</fullName>
    <label>学歴・職歴・ボランティア歴(1)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>