force-app/main/default/objects/Human__c/fields/Career2__c.field-meta.xml
<CustomField>
    <fullName>Career2__c</fullName>
    <label>学歴・職歴・ボランティア歴(2)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>