force-app/main/default/objects/Human__c/fields/Career3__c.field-meta.xml
<CustomField>
    <fullName>Career3__c</fullName>
    <label>学歴・職歴・ボランティア歴(3)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>