force-app/main/default/objects/Human__c/fields/Commute1__c.field-meta.xml
<CustomField>
    <fullName>Commute1__c</fullName>
    <label>所要時間(1)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>