force-app/main/default/objects/Human__c/fields/Commute2__c.field-meta.xml
<CustomField>
    <fullName>Commute2__c</fullName>
    <label>所要時間(2)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>