force-app/main/default/objects/Human__c/fields/Commute3__c.field-meta.xml
<CustomField>
    <fullName>Commute3__c</fullName>
    <label>所要時間(3)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>