force-app/main/default/objects/Human__c/fields/CommutingTime__c.field-meta.xml
<CustomField>
    <fullName>CommutingTime__c</fullName>
    <label>移動可能時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30分以内</fullName>
            </value>
            <value>
                <fullName>45分以内</fullName>
            </value>
            <value>
                <fullName>60分以内</fullName>
            </value>
            <value>
                <fullName>90分以内</fullName>
            </value>
            <value>
                <fullName>90分以上可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>