force-app/main/default/objects/Human__c/fields/Delete_Date__c.field-meta.xml
<CustomField>
    <fullName>Delete_Date__c</fullName>
    <label>削除日</label>
    <type>DateTime</type>
</CustomField>