force-app/main/default/objects/Human__c/fields/DetailActivity__c.field-meta.xml
<CustomField>
    <fullName>DetailActivity__c</fullName>
    <label>具体的な活動内容</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>