force-app/main/default/objects/Human__c/fields/DetailRequest__c.field-meta.xml
<CustomField>
    <fullName>DetailRequest__c</fullName>
    <label>具体的な希望内容</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>