force-app/main/default/objects/Human__c/fields/Email_Hope__c.field-meta.xml
<CustomField>
    <fullName>Email_Hope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メールによる情報配信を希望する</label>
    <type>Checkbox</type>
</CustomField>