force-app/main/default/objects/Human__c/fields/EmailAdress__c.field-meta.xml
<CustomField>
    <fullName>EmailAdress__c</fullName>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField>