force-app/main/default/objects/Human__c/fields/EmailAdressCheck__c.field-meta.xml
<CustomField>
    <fullName>EmailAdressCheck__c</fullName>
    <label>メールアドレス(確認)</label>
    <type>Email</type>
</CustomField>