force-app/main/default/objects/Human__c/fields/EnrollmentEnd1__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentEnd1__c</fullName>
    <label>在籍期間(至)(1)</label>
    <type>Date</type>
</CustomField>