force-app/main/default/objects/Human__c/fields/EnrollmentEnd2__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentEnd2__c</fullName>
    <label>在籍期間(至)(2)</label>
    <type>Date</type>
</CustomField>