force-app/main/default/objects/Human__c/fields/EnrollmentEnd3__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentEnd3__c</fullName>
    <label>在籍期間(至)(3)</label>
    <type>Date</type>
</CustomField>