force-app/main/default/objects/Human__c/fields/EnrollmentStart1__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStart1__c</fullName>
    <label>在籍期間(自)(1)</label>
    <type>Date</type>
</CustomField>