force-app/main/default/objects/Human__c/fields/EnrollmentStart2__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStart2__c</fullName>
    <label>在籍期間(自)(2)</label>
    <type>Date</type>
</CustomField>