force-app/main/default/objects/Human__c/fields/EnrollmentStart3__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStart3__c</fullName>
    <label>在籍期間(自)(3)</label>
    <type>Date</type>
</CustomField>