force-app/main/default/objects/Human__c/fields/Etc_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Etc_Remarks__c</fullName>
    <label>その他特記事項（自由記入）</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>