force-app/main/default/objects/Human__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>登録前面談のコメント</label>
    <type>TextArea</type>
</CustomField>