force-app/main/default/objects/Human__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>学校活動経験</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現在活動している</fullName>
            </value>
            <value>
                <fullName>活動したことがある</fullName>
            </value>
            <value>
                <fullName>活動したことがない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>