force-app/main/default/objects/Human__c/fields/ID_MakeDate__c.field-meta.xml
<CustomField>
    <fullName>ID_MakeDate__c</fullName>
    <label>ID発行日</label>
    <type>Date</type>
</CustomField>