force-app/main/default/objects/Human__c/fields/Interview_Name__c.field-meta.xml
<CustomField>
    <fullName>Interview_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>登録前研修・面談</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>求職者</relationshipLabel>
    <relationshipName>Worker_Interview</relationshipName>
    <type>Lookup</type>
</CustomField>