force-app/main/default/objects/Human__c/fields/Interview_Review__c.field-meta.xml
<CustomField>
    <fullName>Interview_Review__c</fullName>
    <label>登録前面談の評価</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A：優れている</fullName>
            </value>
            <value>
                <fullName>B：普通</fullName>
            </value>
            <value>
                <fullName>C：劣っている</fullName>
            </value>
            <value>
                <fullName>面談未実施</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>