force-app/main/default/objects/Human__c/fields/KanaMei__c.field-meta.xml
<CustomField>
    <fullName>KanaMei__c</fullName>
    <label>名（カナ）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>