force-app/main/default/objects/Human__c/fields/KanaSei__c.field-meta.xml
<CustomField>
    <fullName>KanaSei__c</fullName>
    <label>姓（カナ）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>