force-app/main/default/objects/Human__c/fields/KanjiMei__c.field-meta.xml
<CustomField>
    <fullName>KanjiMei__c</fullName>
    <label>名（漢字）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>