force-app/main/default/objects/Human__c/fields/KanjiSei__c.field-meta.xml
<CustomField>
    <fullName>KanjiSei__c</fullName>
    <label>姓（漢字）</label>
    <length>30</length>
    <type>Text</type>
</CustomField>