force-app/main/default/objects/Human__c/fields/KensyuKibou__c.field-meta.xml
<CustomField>
    <fullName>KensyuKibou__c</fullName>
    <label>登録前研修</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受講する</fullName>
            </value>
            <value>
                <fullName>受講しない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>