force-app/main/default/objects/Human__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <label>教員免許状の種類</label>
    <length>50</length>
    <type>Text</type>
</CustomField>