force-app/main/default/objects/Human__c/fields/LocalAddress__c.field-meta.xml
<CustomField>
    <fullName>LocalAddress__c</fullName>
    <label>都道府県以下の住所</label>
    <length>80</length>
    <type>Text</type>
</CustomField>