force-app/main/default/objects/Human__c/fields/MedicalCare__c.field-meta.xml
<CustomField>
    <fullName>MedicalCare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>医療・看護の資格を有する</label>
    <type>Checkbox</type>
</CustomField>