force-app/main/default/objects/Human__c/fields/MedicalCareName__c.field-meta.xml
<CustomField>
    <fullName>MedicalCareName__c</fullName>
    <label>医療・看護の資格の名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>