force-app/main/default/objects/Human__c/fields/NameQualification__c.field-meta.xml
<CustomField>
    <fullName>NameQualification__c</fullName>
    <label>資格の名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>