force-app/main/default/objects/Human__c/fields/Nendai__c.field-meta.xml
<CustomField>
    <fullName>Nendai__c</fullName>
    <formula
  >IF( ISBLANK( Birthday__c )  ||  TEXT(Birthday__c) =&quot;1900-01-01&quot;, &quot;&quot;, 
IF(OR(MONTH(today())-MONTH( Birthday__c )&gt;0, AND(MONTH(TODAY()) - MONTH(Birthday__c)&gt;=0, DAY(TODAY()) - DAY(Birthday__c)&gt;=0)),
IF((MFLOOR((YEAR(TODAY()) - YEAR(Birthday__c))/10)*10)&lt;80,TEXT(MFLOOR((YEAR(TODAY()) - YEAR(Birthday__c))/10)*10) &amp; &quot;代&quot;,&quot;80代以上&quot;),
IF((MFLOOR((YEAR(TODAY()) - YEAR(Birthday__c)-1)/10)*10)&lt;80,TEXT(MFLOOR((YEAR(TODAY()) - YEAR(Birthday__c)-1)/10)*10) &amp; &quot;代&quot;,&quot;80代以上&quot;)))</formula>
    <label>年代</label>
    <type>Text</type>
</CustomField>