force-app/main/default/objects/Human__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>現在の職業</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>学生</fullName>
            </value>
            <value>
                <fullName>主夫・主婦</fullName>
            </value>
            <value>
                <fullName>教職員</fullName>
            </value>
            <value>
                <fullName>公務員(教職員を除く)</fullName>
            </value>
            <value>
                <fullName>会社員</fullName>
            </value>
            <value>
                <fullName>自営業者</fullName>
            </value>
            <value>
                <fullName>教職員の退職者</fullName>
            </value>
            <value>
                <fullName>企業等の退職者</fullName>
            </value>
            <value>
                <fullName>その他求職者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>