force-app/main/default/objects/Human__c/fields/OtherQualification__c.field-meta.xml
<CustomField>
    <fullName>OtherQualification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>その他の資格を有する</label>
    <type>Checkbox</type>
</CustomField>