force-app/main/default/objects/Human__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;受付&quot;), &quot;登録申込済&quot;,
IF(ISPICKVAL(Status__c, &quot;研修通知&quot;) &amp;&amp;  ISBLANK( Interview_Name__c) , &quot;研修・面談を未申込&quot;,
IF(ISPICKVAL(Status__c, &quot;研修通知&quot;) &amp;&amp;  NOT ISBLANK( Interview_Name__c ) , &quot;研修・面談を申込済&quot;,
IF(ISPICKVAL(Status__c, &quot;研修省略&quot;), &quot;研修・面談を受講しない&quot;,
IF(ISPICKVAL(Status__c, &quot;未評価&quot;), &quot;面談評価未登録&quot;,
IF(ISPICKVAL(Status__c, &quot;ID発行済&quot;), &quot;ユーザID発行済&quot;,
IF(ISPICKVAL(Status__c, &quot;削除&quot;), &quot;ユーザID削除済&quot;,
IF(ISPICKVAL(Status__c, &quot;ID失敗&quot;), &quot;ユーザID発行失敗、システム業者に要連絡&quot;, &quot;&quot;)
)))))))</formula>
    <label>状況</label>
    <type>Text</type>
</CustomField>