force-app/main/default/objects/Human__c/fields/ReplyDate__c.field-meta.xml
<CustomField>
    <fullName>ReplyDate__c</fullName>
    <label>登録前研修・面談の回答日</label>
    <type>Date</type>
</CustomField>