force-app/main/default/objects/Human__c/fields/RequestActivity__c.field-meta.xml
<CustomField>
    <fullName>RequestActivity__c</fullName>
    <label>希望内容</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>教科指導</fullName>
            </value>
            <value>
                <fullName>日本語指導</fullName>
            </value>
            <value>
                <fullName>部活動指導(運動系)</fullName>
            </value>
            <value>
                <fullName>部活動指導(文化系)</fullName>
            </value>
            <value>
                <fullName>特別支援教育</fullName>
            </value>
            <value>
                <fullName>教職員の事務支援</fullName>
            </value>
            <value>
                <fullName>ICTの支援</fullName>
            </value>
            <value>
                <fullName>心理・福祉の支援</fullName>
            </value>
            <value>
                <fullName>その他専門的な知識・技能の活用</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>