force-app/main/default/objects/Human__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>希望校種</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小学校</fullName>
            </value>
            <value>
                <fullName>中学校</fullName>
            </value>
            <value>
                <fullName>高校</fullName>
            </value>
            <value>
                <fullName>特支（視覚）</fullName>
            </value>
            <value>
                <fullName>特支（聴覚）</fullName>
            </value>
            <value>
                <fullName>特支（肢体）</fullName>
            </value>
            <value>
                <fullName>特支（知的）</fullName>
            </value>
            <value>
                <fullName>特支（病弱）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>