force-app/main/default/objects/Human__c/fields/SportsCulture__c.field-meta.xml
<CustomField>
    <fullName>SportsCulture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>運動・文化の資格を有する</label>
    <type>Checkbox</type>
</CustomField>