force-app/main/default/objects/Human__c/fields/SportsCultureName__c.field-meta.xml
<CustomField>
    <fullName>SportsCultureName__c</fullName>
    <label>運動・文化の資格の名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>