force-app/main/default/objects/Human__c/fields/Station1__c.field-meta.xml
<CustomField>
    <fullName>Station1__c</fullName>
    <label>自宅最寄り駅・バス停(1)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>