force-app/main/default/objects/Human__c/fields/Station2__c.field-meta.xml
<CustomField>
    <fullName>Station2__c</fullName>
    <label>自宅最寄り駅・バス停(2)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>