force-app/main/default/objects/Human__c/fields/Station3__c.field-meta.xml
<CustomField>
    <fullName>Station3__c</fullName>
    <label>自宅最寄り駅・バス停(3)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>