force-app/main/default/objects/Human__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受付</fullName>
                <default>true</default>
                <label>受付</label>
            </value>
            <value>
                <fullName>研修通知</fullName>
            </value>
            <value>
                <fullName>研修省略</fullName>
            </value>
            <value>
                <fullName>未評価</fullName>
            </value>
            <value>
                <fullName>ID発行可</fullName>
            </value>
            <value>
                <fullName>ID発行済</fullName>
            </value>
            <value>
                <fullName>削除</fullName>
            </value>
            <value>
                <fullName>ID失敗</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>