force-app/main/default/objects/Human__c/fields/TeacherLicense__c.field-meta.xml
<CustomField>
    <fullName>TeacherLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>教員免許状を有する</label>
    <type>Checkbox</type>
</CustomField>