force-app/main/default/objects/Human__c/fields/TeachingLevel__c.field-meta.xml
<CustomField>
    <fullName>TeachingLevel__c</fullName>
    <label>指導可能対象（レベル）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初心者</fullName>
            </value>
            <value>
                <fullName>初級者(地域大会出場程度)</fullName>
            </value>
            <value>
                <fullName>中級者(県大会出場程度)</fullName>
            </value>
            <value>
                <fullName>上級者(全国・ブロック大会出場程度)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>