force-app/main/default/objects/Human__c/fields/TeachingSex__c.field-meta.xml
<CustomField>
    <fullName>TeachingSex__c</fullName>
    <label>指導可能対象（性別）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>男性</fullName>
            </value>
            <value>
                <fullName>女性</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>