force-app/main/default/objects/Human__c/fields/Telecommunications__c.field-meta.xml
<CustomField>
    <fullName>Telecommunications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>情報通信の資格を有する</label>
    <type>Checkbox</type>
</CustomField>