force-app/main/default/objects/Human__c/fields/TelecommunicationsName__c.field-meta.xml
<CustomField>
    <fullName>TelecommunicationsName__c</fullName>
    <label>情報通信の資格の名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>