force-app/main/default/objects/Human__c/fields/Touroku_kbn__c.field-meta.xml
<CustomField>
    <fullName>Touroku_kbn__c</fullName>
    <formula
  >IF(RecordType.Name=&quot;個人&quot; || RecordType.Name=&quot;個人会員&quot; || RecordType.Name=&quot;個人削除等&quot; || RecordType.Name=&quot;個人受付&quot; || RecordType.Name=&quot;個人評価&quot;,&quot;個人&quot;,&quot;団体&quot;)</formula>
    <label>登録区分</label>
    <type>Text</type>
</CustomField>