force-app/main/default/objects/Human__c/fields/User_No__c.field-meta.xml
<CustomField>
    <fullName>User_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Worker_User</relationshipName>
    <type>Lookup</type>
</CustomField>