force-app/main/default/objects/Human__c/fields/Welfare__c.field-meta.xml
<CustomField>
    <fullName>Welfare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>心理・福祉の資格を有する</label>
    <type>Checkbox</type>
</CustomField>