force-app/main/default/objects/Human__c/fields/WelfareName__c.field-meta.xml
<CustomField>
    <fullName>WelfareName__c</fullName>
    <label>心理・福祉の資格の名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>