force-app/main/default/objects/Human__c/recordTypes/RecordType_Person.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Person</fullName>
    <active>true</active>
    <label>個人</label>
</RecordType>