force-app/main/default/objects/Human__c/recordTypes/RecordType_PersonCheck.recordType-meta.xml
<RecordType>
    <fullName>RecordType_PersonCheck</fullName>
    <active>true</active>
    <label>個人評価</label>
</RecordType>