force-app/main/default/objects/Human__c/recordTypes/RecordType_PersonDel.recordType-meta.xml
<RecordType>
    <fullName>RecordType_PersonDel</fullName>
    <active>true</active>
    <label>個人削除等</label>
</RecordType>