force-app/main/default/objects/Human__c/recordTypes/RecordType_PersonID.recordType-meta.xml
<RecordType>
    <fullName>RecordType_PersonID</fullName>
    <active>true</active>
    <label>個人会員</label>
</RecordType>