force-app/main/default/objects/Human__c/recordTypes/RecordType_Personuke.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Personuke</fullName>
    <active>true</active>
    <label>個人受付</label>
</RecordType>