force-app/main/default/objects/Human__c/validationRules/ActivityForm_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivityForm_Check</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND (RecordType.Name = &quot;個人&quot;, ISBLANK(ActivityForm__c) )</errorConditionFormula>
    <errorDisplayField>ActivityForm__c</errorDisplayField>
    <errorMessage>希望活動形態を選択してください。</errorMessage>
</ValidationRule>